cell preview whitespace fix

--- a/js/intermine/im-tables/1.6.3/flytables.css
+++ b/js/intermine/im-tables/1.6.3/flytables.css
@@ -4959,6 +4959,7 @@
 
 .im-cell-preview .popover-content table.table tr td {
     background: white;
+    white-space: normal;
 }
 
 .im-cell-preview .im-overspill {
